--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
     "git": "^0.1.5",
     "init": "^0.1.2",
     "mongodb": "^6.3.0",
-    "mongoose": "^8.1.0",
-    "nodemon": "^3.0.3"
+    "mongoose": "^8.1.0"
   },
   "name": "backend",
   "version": "1.0.0",
@@ -18,5 +17,8 @@
   },
   "author": "",
   "license": "ISC",
-  "description": ""
+  "description": "",
+  "devDependencies": {
+    "nodemon": "^3.0.3"
+  }
 }
