--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "express": "^4.18.3",
     "git": "^0.1.5",
     "init": "^0.1.2",
+    "moment-timezone": "^0.5.45",
     "mongodb": "^6.3.0",
     "mongoose": "^8.1.0"
   },
